<resources>
    <string name="app_name">News App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="news_thumbnail">news_thumbnail</string>
    <string name="title">Headline</string>
    <string name="bodytext">BodyText</string>
    <string name="web_url_button">web_url_button</string>
    <string name="news_headline">Headline</string>
    <string name="search">Search</string>
    <string name="theme_switch">theme_switch</string>
    <string name="settings_title">Settings</string>
    <string name="toggle_button">ToggleButton</string>
    <string name="read_me_later_text_off">Read Me Later</string>
    <string name="saved_text_on">Saved</string>
</resources>
