<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/thumbnail_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/news_thumbnail"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/headline_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/thumbnail_image"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bodytext_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/headline_text_view"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="fill_horizontal"
            android:text="@string/bodytext"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/web_url_image"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_below="@id/bodytext_text_view"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/web_url_button"
            android:src="@drawable/web_url" />

        <ToggleButton
            android:id="@+id/read_me_later_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="2dp"
            android:checked="false"
            android:text="@string/toggle_button"
            android:textOff="@string/read_me_later_text_off"
            android:textOn="@string/saved_text_on" />

    </RelativeLayout>

</ScrollView>